
// Core Entities
Table users {
  id SERIAL [pk]
  username varchar(100) [unique, not null]
  password_hash text [not null]
  role varchar(50) [not null, note: 'Allowed: ADMIN, CASHIER']
  created_at timestamp
  updated_at timestamp
}

Table products {
  id SERIAL [pk]
  name varchar(255) [not null]
  description text
  price decimal(10,2) [not null]
  cost decimal(10,2)
  stock_quantity int
  category_id int [ref: > product_categories.id]
  created_at timestamp
  updated_at timestamp
}

Table sales {
  id SERIAL [pk]
  user_id int [ref: > users.id]
  customer_id int [ref: > customers.id]
  total_amount decimal(10,2) [not null]
  payment_method varchar(50)
  created_at timestamp
}

Table sale_items {
  id SERIAL [pk]
  sale_id int [ref: > sales.id]
  product_id int [ref: > products.id]
  quantity int [not null]
  price_at_sale decimal(10,2) [not null]
}

Table payments {
  id SERIAL [pk]
  sale_id int [ref: > sales.id]
  method varchar(50) [not null]
  amount_paid decimal(10,2) [not null]
  change_given decimal(10,2)
}

Table inventory_logs {
  id SERIAL [pk]
  product_id int [ref: > products.id]
  user_id int [ref: > users.id]
  change int [not null]
  reason varchar(100)
  timestamp timestamp
}

// Secondary Entities
Table product_categories {
  id SERIAL [pk]
  name varchar(100) [not null]
  description text
}

Table customers {
  id SERIAL [pk]
  name varchar(255) [not null]
  email varchar(255)
  phone varchar(20)
  loyalty_points int
  created_at timestamp
  updated_at timestamp
}

Table discounts {
  id SERIAL [pk]
  type varchar(20) [not null]
  amount decimal(10,2) [not null]
  product_id int [ref: > products.id]
  start_date date
  end_date date
}

Table returns {
  id SERIAL [pk]
  original_sale_id int [ref: > sales.id]
  user_id int [ref: > users.id]
  total_refunded decimal(10,2)
  created_at timestamp
}

Table return_items {
  id SERIAL [pk]
  return_id int [ref: > returns.id]
  product_id int [ref: > products.id]
  quantity int [not null]
  refund_amount decimal(10,2)
}
